next
----
-added refresh_chado_mart to the installer

ergatis-v2r8b1
--------------
-software.config: added sections for rdp_classifier, stap_aligner, stap_classifier
-targetp2legacydb.pl: revised pattern match on model name during raw file parsing
-get_pipeline_lists.cgi: now checks for the existance of the path stored in 'temp_space' of ergatis.ini and creates it if it doesn't exist
-Prokaryotic_Annotation_Pipeline: Removed unnecessary variables from pipeline_summary.default.config
-Util: Added check_pipeline_template_configs.pl
-priam_ec_assignment: initial commit
-ec_assignment: removing component from svn and Makefile.PL
-hmmpfam2htab.pl: removes slashes from temp filename
-software.config: removed unused $;HTAB_EXEC$; variable
-pepstats: removed unused parameters in config file (obviously from a component copy)
-stap_aligner: component added
-stap_classifier: component added
-rdp_classifier: component added
-genbank2bsml: new command-line options and bug fixes to support pan-genome analyses
-pangenome_blast_parse.pl, pangenome_query_list.pl: generalized regexes to not fail so much
-installer: added stap_aligner, stap_classifier and rdp_classifier components
-legacy2bsml: added host and rdbms arguments
-lipoprotein_motif: added algorithm, program and programversion to BSML Analysis element
-start_site_curation: Fixed bug where script would fail on a molecule that didn't have any unchanged genes
-ps_scan: linked input sequences to Analysis element in BSML output
-utilities: added check_pipeline_template_configs.pl script
-SF web: added new screenshots
-priam_ec_assignment: initial commit
-ec_assignment: removing component from svn and Makefile.PL
-refresh_chado_mart: Updated the component to work with the newly optimized chadoToChadoMart script. Changes included replacing analysis_id with cluster_analysis_id, supporting blast_analysis_id and use_cm_blast and a few extra comments.
-initdb: now has PostgreSQL support and can be run as non-superuser
